--- a/index.html
+++ b/index.html
@@ -5,9 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Homework, profile">
+    <meta name="keywords" content="HTMl, CSS">
+    <meta name="author" content="Mariam Chiburdanidze">
+    <meta property="og:url" content="" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Homework" />
+    <meta property="og:description" content="Unilab Homework" />
+    <meta property="og:image" content="profile-image.png" />
     <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>home</title>
+    <title>profile</title>
 </head>
 
 <body>
@@ -27,16 +35,24 @@
                 <div class="header-nav">
                     <ul>
                         <li>
-                            <img src="./assets/images/header-logos/message-circle.png" alt="message-circle logo">
+                            <a href="#">
+                                <img src="./assets/images/header-logos/message-circle.png" alt="message-circle logo">
+                            </a>
                         </li>
                         <li>
-                            <img src="./assets/images/header-logos/grid.png" alt="grid logo">
+                            <a href="#">
+                                <img src="./assets/images/header-logos/grid.png" alt="grid logo">
+                            </a>
                         </li>
                         <li>
-                            <img src="./assets/images/header-logos/settings.png" alt="settings logo">
+                            <a href="#">
+                                <img src="./assets/images/header-logos/settings.png" alt="settings logo">
+                            </a>
                         </li>
                         <li class="header-nav-profile">
-                            <img src="./assets/images/header-logos/profile-image.png" alt="profile logo">
+                            <a href="#">
+                                <img src="./assets/images/header-logos/profile-image.png" alt="profile logo">
+                            </a>
                         </li>
                     </ul>
                 </div>
@@ -74,19 +90,34 @@
                 <div class="left-side-bar-icons">
                     <ul>
                         <li>
-                            <img src="./assets/images/nav-bar-logos/bell.png" alt="bell logo">
+                            <a href="#">
+                                <img src="./assets/images/nav-bar-logos/bell.png" alt="bell logo">
+                            </a>
+                        </li>
+
+
+                        <li>
+                            <a href="#">
+                                <img src="./assets/images/nav-bar-logos/message-circle (1).png"
+                                    alt="message-circle logo">
+                            </a>
+
                         </li>
                         <li>
-                            <img src="./assets/images/nav-bar-logos/message-circle (1).png" alt="message-circle logo">
+                            <a href="#">
+                                <img src="./assets/images/nav-bar-logos/image (1).png" alt="image logo">
+                            </a>
+
                         </li>
                         <li>
-                            <img src="./assets/images/nav-bar-logos/image (1).png" alt="image logo">
-                        </li>
+                            <a href="#">
+                                <img src="./assets/images/nav-bar-logos/video (1).png" alt="video logo">
+                            </a>
+
                         <li>
-                            <img src="./assets/images/nav-bar-logos/video (1).png" alt="video logo">
-                        </li>
-                        <li>
-                            <img src="./assets/images/nav-bar-logos/shopping-cart.png" alt="shopping-cart logo">
+                            <a href="#">
+                                <img src="./assets/images/nav-bar-logos/shopping-cart.png" alt="shopping-cart logo">
+                            </a>
                         </li>
                     </ul>
                 </div>
@@ -105,17 +136,26 @@
                 <div class="nav-pinned-images">
                     <ul>
                         <li>
-                            <img src="./assets/images/nav-bar-logos/meal.png" alt="meal logo">
+                            <a href="#">
+                                <img src="./assets/images/nav-bar-logos/meal.png" alt="meal logo">
+                            </a>
                         </li>
                         <li>
-                            <img src="./assets/images/profile-images/boy-profile.png" alt="boy's profile">
+                            <a href="#">
+                                <img src="./assets/images/profile-images/boy-profile.png" alt="boy's profile">
+                            </a>
                         </li>
                         <li>
-                            <img src="./assets/images/profile-images/skincare-profile.png"
-                                alt="girl with skincare profile">
+                            <a href="#">
+                                <img src="./assets/images/profile-images/skincare-profile.png"
+                                    alt="girl with skincare profile">
+                            </a>
+
                         </li>
                         <li>
-                            <img src="./assets/images/profile-images/man-profile.png" alt="man's profile">
+                            <a href="#">
+                                <img src="./assets/images/profile-images/man-profile.png" alt="man's profile">
+                            </a>
                         </li>
                     </ul>
                 </div>
@@ -217,9 +257,15 @@
                     </div>
                     <div class="bottom-section-profile-wrapper-icons">
                         <div class="bottom-section-profile-icons">
-                            <img src="./assets/images/main-logos/heart.png" alt="heart logo">
-                            <img src="./assets/images/main-logos/message-circle.png" alt="message-circle logo">
-                            <img src="./assets/images/main-logos/share.png" alt="share logo">
+                            <a href="#">
+                                <img src="./assets/images/main-logos/heart.png" alt="heart logo">
+                            </a>
+                            <a href="#">
+                                <img src="./assets/images/main-logos/message-circle.png" alt="message-circle logo">
+                            </a>
+                            <a href="#">
+                                <img src="./assets/images/main-logos/share.png" alt="share logo">
+                            </a>
                         </div>
                         <div>
                             <button class="see-more">See more...</button>
