--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Homework" />
     <meta property="og:description" content="Unilab Homework" />
-    <meta property="og:image" content="profile-image.png" />
+    <meta property=og:image:type content="profile-image.png" />
     <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>profile</title>
