--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
             <div class="side-bar-bottom-wrapper">
                 <div class="side-bar-bottom">
                     <div class="side-bar-bottom-icons">
-                        <img src="./assets/images/side-bar-logos/Vector.png">
+                        <img src="./assets/images/side-bar-logos/Vector.png" alt="vector">
                     </div>
                     <span>See more</span>
                 </div>
